fixed the overflow of the circadian

--- a/src/components/ThemeChanger/themeChanger.module.css
+++ b/src/components/ThemeChanger/themeChanger.module.css
@@ -39,13 +39,16 @@
   border-radius: 4px 4px 0 0;
   position: relative;
   cursor: pointer;
-  width: 50px; /* Set a fixed width */
+  width: calc(100% / 24); 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .hour img {
   transition: height 0.3s linear;
   height: 50px;
-  width: 50px;
+  /* width: 50px; */
 }
 
 img:hover,
